# data-structures

./: .gitignore  README.md
.bsp/: scala-cli.json
.metals/: metals.lock.db  metals.mv.db
.scala-build/: ide-envs.json  ide-inputs.json
.scala-build/.bloop/: data-structures_1dcda15695-test.json  data-structures_1dcda15695.json
c/bst/: bst.c  bst.h  build.sh  main.c
c/hashtable/: README.md  build.sh  hashtable.c  hashtable.h  main.c  run.sh
c/min-heap/: build.sh  heap.c  heap.h  main.c  run.sh
c/queue/: README.md  build.sh  main.c  queue.c  queue.h
c/single-linked-list/: README.md  build.sh  list.c  list.h  main.c
c/stack/: README.md  build.sh  main.c  stack.c  stack.h
clojure/bst/: README.md  run.sh
clojure/hashtable/: README.md
clojure/min-heap/: README.md
clojure/queue/: README.md
clojure/single-linked-list/: README.md  project.clj
clojure/stack/: README.md
concepts/: bst.md  hashmap.md  linked-list.md  queue.md  stack.md
cpp/hashtable/: build.sh
cpp/min-heap/: build.sh
cpp/queue/: README.md  build.sh  run.sh
cpp/single-linked-list/: README.md
cpp/stack/: README.md
go/bst/: bst.go  main.go
go/hashtable/: README.md  hashtable.go  main.go
go/min-heap/: heap.go  main.go
haskell/hashtable/: README.md  projectName.cabal
haskell/hashtable/app/: Hashtable.hs  Main.hs
haskell/single-linked-list/: README.md  projectName.cabal
haskell/single-linked-list/app/: List.hs  Main.hs
haskell/single-linked-list/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
(+238 files in other folders)
