cabal-version:      2.4
name:               hashtable
version:            0.1.0.0
license:            NONE

executable hashtable
    main-is:          Main.hs
    other-modules:    Hashtable
    build-depends:    base ^>=4.16.3.0
                    , vector
                    , hashable
    hs-source-dirs:   app
    default-language: Haskell2010