cabal-version:      2.4
name:               projectName
version:            0.1.0.0
license:            NONE
author:             diegopacheco
maintainer:         diego.pacheco.it@gmail.com
extra-source-files: CHANGELOG.md

executable projectName
    main-is:          Main.hs
    other-modules:    List
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   app
    default-language: Haskell2010